components/61-layouts/general/detail-layout/_detail-layout.scss
.detail-layout {
  @extend %content-container;

  margin-top: 1.2rem;
  font-size: .9rem;
  line-height: 1.8;

  > * {
    @include desktop {
      @include set-layout('width-7', 'offset-2');
    }
  }

  .readspeaker-button {
    display: block;
    width: auto;
    margin-top: -.4rem;
    margin-bottom: .4rem;
  }

  > .quote,
  > .image-gallery--wrapper,
  > .help-block,
  > .search-block,
  > .info-box {
    @include desktop {
      @include set-layout('width-9', 'offset-1');
    }
  }

  > ul.accordion {
    @include desktop {
      @include set-layout('width-7', 'offset-2');
    }

    .accordion--content p {
      line-height: 1.75;
    }
  }

  > .help-block {
    @include desktop {
      padding-left: span(1 wide of 12);
    }
  }

  > .quote,
  > .image-gallery--wrapper,
  > .help-block,
  > .search-block,
  > .video,
  > .timeline {
    margin-top: 4.5rem;
    margin-bottom: 2rem;
  }

  > .info-box {
    margin-bottom: 2rem;
  }

  > .quote {
    // Spot image escapes the container by 2.5rem.
    margin-top: 5.5rem;

    @include desktop {
      margin-top: 2rem;
    }
  }

  > .help-block,
  > .search-block {
    @include wide;
  }

  > .timeline {
    @include set-layout();
    @include extra-wide;
  }

  .summary-text {
    font-weight: 600;
  }

  $bulb-image-width: 6rem;

  + aside {
    @extend %content-container;

    position: relative;
    margin: 2rem 0;

    @include tablet {
      margin: 5rem auto;
    }

    &::before {
      @include spot-image('lightBulb', $bulb-image-width);

      display: block;
      position: relative;
      margin: 2rem auto (-$bulb-image-width/2);
      z-index: 1;

      @include tablet {
        position: absolute;
        top: -($bulb-image-width/2);
        right: span(1 of 12);
        margin: 0;
      }
    }

    > div:first-child {
      padding-top: 5rem;

      @include tablet {
        padding-top: 2rem;
      }
    }

    > * {
      @include desktop {
        @include set-layout('width-7', 'offset-2');
      }
    }

    .document-box,
    .extra-articles,
    .related-box {
      @include desktop {
        @include set-layout();
        width: 100%;
        margin-left: 0;
        padding-right: span(2 wide of 12);
        padding-left: span(2 wide of 12);
      }
    }

    .feedback-form {
      @include wide;

      margin-bottom: 2rem;

      @include desktop {
        @include set-layout('width-9', 'offset-1');

        padding-left: span(1 wide of 12);
      }
    }
  }
}

